Redirect to homepage itself

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <p>
-      Redirecting you to <a href="http://about.me/xnt">my About.me page</a>
+      Redirecting you to <a href="http://vplata.com">vplata.com</a>
    </p>
 </body>
 </html>
