--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Vicente Plata">
+    <meta name="twitter:description" content="Hi there!">
+    <meta name="twitter:creator" content="xnt">
+    <meta name="twitter:image" content="/images/favicons/favicon-194x194.png" />
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Vicente Plata">
+    <meta property="og:description" content="Hi there!">
+    <meta property="og:image" content="/images/favicons/favicon-194x194.png" />
     <title>Vicente Plata</title>
   </head>
   <body>
@@ -13,4 +22,14 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-48212133-2', 'auto');
+      ga('send', 'pageview');
+    </script>
+    
   </body>
