:abc: playing with fonts

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,13 @@
     <meta name="twitter:title" content="Vicente Plata">
     <meta name="twitter:description" content="Hi there!">
     <meta name="twitter:creator" content="xnt">
-    <meta name="twitter:image" content="/images/favicons/favicon-194x194.png" />
+    <!--<meta name="twitter:image" content="/images/favicons/favicon-194x194.png" />-->
     <meta property="og:type" content="article">
     <meta property="og:title" content="Vicente Plata">
     <meta property="og:description" content="Hi there!">
-    <meta property="og:image" content="/images/favicons/favicon-194x194.png" />
+    <!--<meta property="og:image" content="/images/favicons/favicon-194x194.png" />-->
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,700|Rock+Salt&display=swap" 
+      rel="stylesheet">
     <title>Vicente Plata</title>
   </head>
   <body>
